# Projets

./: README.md  wtr_launch.sh
Cuda-DIP/: README.md
Cuda-DIP/cuda/: CMakeLists.txt  package.xml
Cuda-DIP/cuda/src/: cuda.py  main.py  modeControl.py  pic.py
Cuda-DIP/cuda/src/Img/: 3.psd
Cuda-DIP/cuda/src/KDIP_cuda/: Hoff.py  __init__.py  cuda_filter.py  fft.py  mono.py  teh.py  utils.py
ROS-mobile/: README.md  Untitled Document
ROS-mobile/src/master_pkg/src/: keyControl.cpp  master.cpp  tcp_client.cpp
ROS-mobile/src/slave_pkg/src/: slave.cpp
V-SLAM-UAV/: README.md
V-SLAM-UAV/src/wtr/: package.xml
V-SLAM-UAV/src/wtr/include/: wtr_UAVpara.h
V-SLAM-UAV/src/wtr/src/: historty  wtr_UAVpara.cpp  wtr_point2path.cpp  wtr_serial.cpp
src/: README.md
src/wtr/: CMakeLists.txt
src/wtr/launch/: WTR_UAV.launch
src/wtr/src/: wtr_master.cpp  wtr_serial2acfly.cpp
